--- a/.github/workflows/split-userinput.yml
+++ b/.github/workflows/split-userinput.yml
@@ -32,9 +32,13 @@ jobs:
       - name: Install jq
         shell: bash
         run: brew install jq
+  
+  # Print UserInput.json
+      - name: Print file
+        run: cat .xd-testing/UserInput.json
 
   # First split of the UserInput file
-      - name: Split Otologies from Fragments
+      - name: Split Ontologies from Fragments
         run: |
           file=".xd-testing/UserInput.json"
           jq -cr 'keys[] as $k | "\($k)\t\(.[$k])"' "$file"  | awk -F\\t '{ file=$1".json"; print $2 > file; close(file); }'
