--- a/.github/workflows/split-userinput.yml
+++ b/.github/workflows/split-userinput.yml
@@ -50,10 +50,10 @@ jobs:
           jq -cr 'keys[] as $k | "\($k)\t\(.[$k])"' "$file"  | awk -F\\t '{ file=$1".json"; print $2 > file; close(file); }'
         
   # Delete txt file
-      - name: Delete txt file
-        run: |
-          rm ontologies.json
-          rm fragments.json      
+    #  - name: Delete txt file
+     #   run: |
+      #    rm ontologies.json
+       #   rm fragments.json      
   
   # Print new files
       - name: Print new files
